--- a/hotel/templates/hotel/base.html
+++ b/hotel/templates/hotel/base.html
@@ -1,37 +1,18 @@
 {% load static tailwind_tags %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <title>{% block title %}StayWise{% endblock %}</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% tailwind_css %}
   </head>
-  <body class="bg-gray-50 min-h-screen flex flex-col text-black font-sans">
-    <nav class="bg-white shadow-md py-4 px-8 flex justify-between items-center">
-      <a href="{% url 'landing' %}" class="text-2xl font-bold text-blue-600"
-        >StayWise</a
-      >
-      <div class="space-x-4">
-        <a href="{% url 'landing' %}" class="text-gray-700 hover:text-blue-600"
-          >Inicio</a
-        >
-        <a
-          href="{% url 'reservations' %}"
-          class="text-gray-700 hover:text-blue-600"
-          >Reservas</a
-        >
-        <a href="{% url 'login' %}" class="text-gray-700 hover:text-blue-600"
-          >Iniciar sesión</a
-        >
-        <a href="{% url 'signup' %}" class="text-gray-700 hover:text-blue-600"
-          >Registrarse</a
-        >
-      </div>
-    </nav>
-    <main class="flex-1 container mx-auto px-4 py-8">
-      <button class="btn">Default</button>
-      {% block content %}{% endblock %}
+  <body class="min-h-screen flex flex-col bg-gray-50">
+    {% include "hotel/navbar.html" %}
+    <main
+      class="flex-grow mx-12 sm:mx-20 md:mx-32 lg:mx-56 xl:mx-80 my-4 md:my-6 flex flex-col"
+    >
+      {% block content %} {% endblock %}
     </main>
     <footer
       class="bg-white shadow-inner py-4 text-center text-gray-500 mt-auto"
